After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 657235 - The use-same-proxy not set after changes in proxy settings
The use-same-proxy not set after changes in proxy settings
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-08-24 12:06 UTC by Jan Horak
Modified: 2011-09-01 13:30 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jan Horak 2011-08-24 12:06:09 UTC
The org.gnome.system.proxy:use-same-proxy parameter is not set to false when http and https proxy are filled. There is no way how to set this parameter from gnome-control-center.

Steps to reproduce:
gnome-control-center/Network/Network proxy
set Method to Manual, fill in http and https proxy
gsettings list-recursively org.gnome.system.proxy|grep use-same-proxy
Result:
org.gnome.system.proxy use-same-proxy true
Expected result:
org.gnome.system.proxy use-same-proxy false
or different way how to determine to use same or different proxy for each network protocol.
Comment 1 Richard Hughes 2011-09-01 13:30:19 UTC
commit d62e0da9db27fae814528bc92f982af5c2e8b9d5
Author: Richard Hughes <richard@hughsie.com>
Date:   Thu Sep 1 14:29:46 2011 +0100

    network: Explicitly unset 'use-same-proxy' as there's no UI for that
    
    This fixes proxy selection for people that have upgraded from GNOME 2.
    
    Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=657235