network: Explicitly unset 'use-same-proxy' as there's no UI for that

This fixes proxy selection for people that have upgraded from GNOME 2.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=657235